--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,8 @@
 {
   "name": "jw_utils",
   "version": "1.0.2",
-  "lock": false
+  "lock": false,
+  "tasks": {
+    "e2e": "deno run -A examples/e2e.ts"
+  }
 }
